# textadept-kindle

./: .gitignore  CMakeLists.txt  README.md  init.lua
core/: .iconv.luadoc  .os.luadoc  .ui.dialogs.luadoc  args.lua  args_test.lua  assert.lua  assert_test.lua  buffer.lua  buffer_test.lua  events.lua  file_io.lua  file_io_test.lua  iface.lua  init.lua  init_test.lua  keys.lua  kindle.lua  lexer.lua  lexer_test.lua  lfs_ext.lua  lfs_ext_test.lua  locale.conf  locale.lua  locale_test.lua  table_ext.lua  ui.lua  ui_dialogs_test.lua  ui_test.lua  view.lua  view_test.lua
core/locales/: locale.ar.conf  locale.de.conf  locale.es.conf  locale.fr.conf  locale.it.conf  locale.ja.conf  locale.pl.conf  locale.pt_BR.conf  locale.ru.conf  locale.sv.conf  locale.zh.conf
docs/: README.md  _config.yml  api.md  changelog.md  faq.md  manual.md  thanks.md
modules/textadept/: bookmarks.lua  clipboard.lua  clipboard_test.lua  command_entry.lua  command_entry_test.lua  editing.lua  editing_test.lua  find.lua  find_test.lua  history.lua  history_test.lua  init.lua  keys.lua  keys_test.lua  macros.lua  macros_test.lua  menu.lua  menu_test.lua  run.lua  run_test.lua  session.lua  session_test.lua  snippets.lua  snippets_test.lua
patchedfiles/: ScintillaGTK.cxx  ScintillaGTKAccessible.cxx
scripts/: codecov.sh  gen_docs.sh  gen_iface.lua  gen_plist.lua  gen_plot.lua  markdowndoc.lua  update_copyright.sh
scripts/kindle/: run.sh  textadept.sh  textadept_booklet.sh
scripts/kindle/textadept_kual/: config.xml  menu.json  run.sh
scripts/osx/: textadept_osx
src/: Info.plist  Makefile  termkey.patch  textadept.c  textadept.h  textadept.rc  textadept_curses.c  textadept_gtk.c  textadept_platform.h  textadept_qt.cpp
src/cdk/: binding.c  cdk.c  cdk.h  cdkscreen.c  draw.c  entry.c  fselect.c  itemlist.c
src/gtdialog/: gtdialog.c
src/lua/src/: loslib.c  luaconf.h
src/scintilla/gtk/: PlatGTK.cxx  ScintillaGTK.cxx  ScintillaGTKAccessible.cxx
src/scintilla/src/: XPM.cxx
src/termkey/: driver-win-pdcurses.c  termkey-internal.h  termkey.c  termkey.h
test/: helpers.lua  helpers_test.lua  test.lua
themes/: dark.lua  light.lua  term.lua  term_light.lua
